objects/CRM_Mtg_BDM_Target__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_App_Achieved__c</fullName>
        <label>Prime WL App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime WL App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime WL App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Sett_Achieved_Amt__c</fullName>
        <label>Prime WL Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Sett_Achieved__c</fullName>
        <label>Prime WL Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime WL Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime WL Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_Split_Percentage__c</fullName>
        <formula>IF( CRM_Mtg_Total_WL_App_Achieved__c = 0, 0,  CRM_Mtg_Prime_WL_App_Achieved__c  / CRM_Mtg_Total_WL_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime WL % Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_Date__c</fullName>
        <formula>DATE(VALUE(TEXT(CRM_Mtg_Year__c)),
CASE(CRM_Mtg_Month__c, &apos;Jan&apos;, 1,
&apos;Feb&apos;, 2,
&apos;Mar&apos;, 3,
&apos;Apr&apos;, 4,
&apos;May&apos;, 5,
&apos;Jun&apos;, 6,
&apos;Jul&apos;, 7,
&apos;Aug&apos;, 8,
&apos;Sep&apos;, 9,
&apos;Oct&apos;, 10,
&apos;Nov&apos;, 11,
&apos;Dec&apos;, 12,0)
,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_App_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_Total_Retail_App_Achieved_Amt__c + CRM_Mtg_Total_WL_App_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total App Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_App_Achieved__c</fullName>
        <formula>CRM_Mtg_Total_Retail_App_Achieved__c + CRM_Mtg_Total_WL_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total App Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_App_Target_Amt__c</fullName>
        <formula>CRM_Mtg_Total_Retail_App_Target_Amt__c + CRM_Mtg_Total_WL_App_Target_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_App_Target__c</fullName>
        <formula>CRM_Mtg_Total_Retail_App_Target__c + CRM_Mtg_Total_WL_App_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_NCNP_Achieved_App_No__c</fullName>
        <formula>CRM_Mtg_NCNP_Retail_App_Achieved__c + CRM_Mtg_NCNP_WL_App_Achieved_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total NCNP Achieved App #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_NCNP_Target_App_No__c</fullName>
        <formula>CRM_Mtg_NCNP_Retail_App_Target__c +  CRM_Mtg_NCNP_WL_App_Target_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total NCNP Target App #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Prime_Achieved_App_No__c</fullName>
        <formula>CRM_Mtg_Prime_Retail_App_Achieved__c +  CRM_Mtg_Prime_WL_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prime Achieved App #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Prime_Target_App_No__c</fullName>
        <formula>CRM_Mtg_Prime_Retail_Application_No__c +  CRM_Mtg_Prime_WL_Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prime Target App #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_App_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_NC_Retail_App_Achieved_Amt__c + CRM_Mtg_NP_Retail_App_Achieved_Amt__c + CRM_Mtg_Prime_Retail_App_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail App Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_App_Achieved__c</fullName>
        <formula>CRM_Mtg_NC_Retail_App_Achieved__c + CRM_Mtg_NP_Retail_App_Achieved__c + CRM_Mtg_Prime_Retail_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail App Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_App_Target_Amt__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Application_Amt__c + CRM_Mtg_NP_Retail_Application_Amt__c + CRM_Mtg_Prime_Retail_Application_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_App_Target__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Application_No__c + CRM_Mtg_NP_Retail_Application_No__c + CRM_Mtg_Prime_Retail_Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_Sett_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Sett_Achieved_Amt__c + CRM_Mtg_NP_Retail_Sett_Achieved_Amt__c + CRM_Mtg_Prime_Retail_Sett_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Sett Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_Sett_Achieved__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Sett_Achieved__c + CRM_Mtg_NP_Retail_Sett_Achieved__c + CRM_Mtg_Prime_Retail_Sett_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Sett Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_Sett_Target_Amt__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Settlement_Amt__c + CRM_Mtg_NP_Retail_Settlement_Amt__c + CRM_Mtg_Prime_Retail_Settlement_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Retail_Sett_Target__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Settlement_No__c + CRM_Mtg_NP_Retail_Settlement_No__c + CRM_Mtg_Prime_Retail_Settlement_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Sett_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_Total_Retail_Sett_Achieved_Amt__c + CRM_Mtg_Total_WL_Sett_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sett Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Sett_Achieved__c</fullName>
        <formula>CRM_Mtg_Total_Retail_Sett_Achieved__c + CRM_Mtg_Total_WL_Sett_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sett Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Sett_Target_Amt__c</fullName>
        <formula>CRM_Mtg_Total_Retail_Sett_Target_Amt__c + CRM_Mtg_Total_WL_Sett_Target_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_Sett_Target__c</fullName>
        <formula>CRM_Mtg_Total_Retail_Sett_Target__c + CRM_Mtg_Total_WL_Sett_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_App_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_NC_WL_App_Achieved_Amt__c + CRM_Mtg_NP_WL_App_Achieved_Amt__c + CRM_Mtg_Prime_WL_App_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL App Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_App_Achieved__c</fullName>
        <formula>CRM_Mtg_NC_WL_App_Achieved__c + CRM_Mtg_NP_WL_App_Achieved__c + CRM_Mtg_Prime_WL_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL App Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_App_Target_Amt__c</fullName>
        <formula>CRM_Mtg_NC_WL_Application_Amt__c + CRM_Mtg_NP_WL_Application_Amt__c + CRM_Mtg_Prime_WL_Application_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_App_Target__c</fullName>
        <formula>CRM_Mtg_NC_WL_Application_No__c + CRM_Mtg_NP_WL_Application_No__c + CRM_Mtg_Prime_WL_Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_Sett_Achieved_Amt__c</fullName>
        <formula>CRM_Mtg_NC_WL_Sett_Achieved_Amt__c + CRM_Mtg_NP_WL_Sett_Achieved_Amt__c + CRM_Mtg_Prime_WL_Sett_Achieved_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL Sett Achieved $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_Sett_Achieved__c</fullName>
        <formula>CRM_Mtg_NC_WL_Sett_Achieved__c + CRM_Mtg_NP_WL_Sett_Achieved__c + CRM_Mtg_Prime_WL_Sett_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL Sett Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_Sett_Target_Amt__c</fullName>
        <formula>CRM_Mtg_NC_WL_Settlement_Amt__c + CRM_Mtg_NP_WL_Settlement_Amt__c + CRM_Mtg_Prime_WL_Settlement_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Total_WL_Sett_Target__c</fullName>
        <formula>CRM_Mtg_NC_WL_Settlement_No__c + CRM_Mtg_NP_WL_Settlement_No__c + CRM_Mtg_Prime_WL_Settlement_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WL Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>BDM Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <columns>CRM_Mtg_BDM_Unique_Id__c</columns>
        <columns>CRM_Mtg_Month__c</columns>
        <columns>CRM_Mtg_Year__c</columns>
        <columns>CRM_Mtg_Default_Record__c</columns>
        <columns>CRM_Mtg_Is_Mortgage_BDM__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Targets</fullName>
        <columns>NAME</columns>
        <columns>CRM_Mtg_Month__c</columns>
        <columns>CRM_Mtg_Year__c</columns>
        <columns>CRM_Mtg_NC_WL_Application_Amt__c</columns>
        <columns>CRM_Mtg_NC_WL_Application_No__c</columns>
        <columns>CRM_Mtg_NC_WL_Settlement_Amt__c</columns>
        <columns>CRM_Mtg_NC_WL_Settlement_No__c</columns>
        <columns>CRM_Mtg_NP_WL_Application_Amt__c</columns>
        <columns>CRM_Mtg_NP_WL_Application_No__c</columns>
        <columns>CRM_Mtg_NP_WL_Settlement_Amt__c</columns>
        <columns>CRM_Mtg_NP_WL_Settlement_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Targets</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BDM Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CRM_Mtg_Disable_Editing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
OR(ISCHANGED(Name),
ISCHANGED(CRM_Mtg_BDM_Unique_Id__c),
ISCHANGED(CRM_Mtg_Month__c),
ISCHANGED(CRM_Mtg_Year__c),
ISCHANGED(CRM_Mtg_BDM__c)
))</errorConditionFormula>
        <errorDisplayField>CRM_Mtg_BDM__c</errorDisplayField>
        <errorMessage>No fields other than Targets can be changed once record has been created.</errorMessage>
    </validationRules>
</CustomObject>